syntax = "proto3";

package org.raystack.dagger.consumer;

option java_multiple_files = true;
option java_package = "org.raystack.dagger.consumer";
option java_outer_classname = "EnrichedBookingLogMessageProto";

import "google/protobuf/timestamp.proto";
import "org/raystack/dagger/consumer/TestLogMessage.proto";

message EnrichedBookingLogMessage {
    org.raystack.dagger.consumer.TestBookingLogMessage booking_log = 1;
    CustomerLogMessage customer_profile = 2;
    google.protobuf.Timestamp event_timestamp = 3;
}


message CustomerLogMessage {
    string customer_id = 1;                        // required
    string customer_url = 2;                       // required
    google.protobuf.Timestamp event_timestamp = 3; // required
    string name = 4;                               // required
    string email = 5;                              // required
    string phone = 6;                              // required
    bool phone_verified = 7;
    bool email_verified = 8;
    bool blacklisted = 9;
    bool active = 10;
    string wallet_id = 11;
    google.protobuf.Timestamp dob = 13;
    string facebook_id = 14;
    bool new_user = 15;
    string signed_up_country = 16;
    string locale = 17;
    google.protobuf.Timestamp created_at = 18;
    google.protobuf.Timestamp updated_at = 19;
    string onboarding_partner = 20;
    string old_identifier_value = 23;
    string bio = 24;
    string profile_image_url = 25;
    string deactivating_partner = 26;
    string deactivating_reason = 27;
    string created_by = 28;
    string gopay_account_id = 29;
    string revival_reason = 30;
    string reviving_partner = 31;
    string toko_id = 32;
}

